--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^1.1.2
+  http: ^0.12.2
+  equatable: ^1.2.6
+  meta: ^1.2.4
+  shared_preferences: ^0.5.12+4
 
 
   # The following adds the Cupertino Icons font to your application.
