--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^1.1.2
+  flutter_bloc: ^6.1.2
   http: ^0.12.2
   equatable: ^1.2.6
   meta: ^1.2.4
