--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   equatable: ^1.2.6
   meta: ^1.2.4
   shared_preferences: ^0.5.12+4
+  fluttertoast: ^7.1.6
+  google_map_polyline: ^0.2.0+1
+  android_intent: ^0.3.7+7
 
 
   # The following adds the Cupertino Icons font to your application.
